--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.32.0",
-    "@neondatabase/serverless": "^1.0.1",
-    "@prisma/adapter-neon": "^6.16.2",
+    "@clerk/nextjs": "^6.35.3",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^6.19.0",
     "@prisma/client": "^6.16.2",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
-    "inngest": "^3.41.0",
+    "imagekit": "^6.0.0",
+    "inngest": "^3.45.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
